# codeit-ai-3team-ad-content

./: .env.example  .gitignore  CONTEXT.md  LICENSE  QUICKSTART.md  README.md  environment.yml  environment_py311_adv2.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_py311_adv2.txt  run_tests.sh
.claude/: context.md  project.md
.github/: copilot-instructions.md
.github/workflows/: mirror.yml
docs/: api_mapping_review.md  index.md  검토사항_적용완료_260119.md
docs/_layouts/: default.html
docs/api/: CLIP_Score_API_Guide.md  CLIP_Score_Implementation_Report.md  CLIP_Score_KoCLIP_Update.md  Dashboard_CLIP_Score_Guide.md  index.md  nanoCocoa_aiserver_REST_API.md
docs/doc/: DOCKER.md  Docker_배포_가이드.md  GCP_VM_접속가이드.md  INSTALL.md  LLM광고생성가이드.md  MCP_README.md  MCP서버_구현요약.md  MCP서버_사용가이드.md  README.md  TEST_GUIDE.md  TODO_DOCUMENTATION.md  auto_unload_implementation.md  index.md  nanoCocoa_AI_Server_아키텍처설계.md  product_image_base64_update.md  경로_구조.md  고급_프로젝트_수행_계획_및_환경_검토_보고서.md  아키텍처설계-01.md  아키텍처설계.md  완전한_설치_가이드.md  환경설정_가이드.md
docs/발표자료/: index.md
docs/보고서/: index.md  발표자료_01_박지윤_프로젝트개요.md  발표자료_02_김명환_아키텍처.md  발표자료_03_김민혁_텍스트생성.md  발표자료_04_이솔형_이미지생성.md  발표자료_05_이건희_풀스택.md  프로젝트완료보고서.md  프로젝트완료보고서_초안.md
docs/협업일지/: index.md
docs/협업일지/김명환/: index.md  협업일지_Day_11_2026-01-14.md  협업일지_Day_12_2026-01-15.md  협업일지_Day_13_2026-01-16.md  협업일지_Day_14_2026-01-19.md  협업일지_Day_15_2026-01-20.md  협업일지_Day_16_2026-01-21.md  협업일지_Day_17_2026-01-22.md  협업일지_Day_18_2026-01-23.md  협업일지_Day_19_2026-01-26.md  협업일지_Day_1_2025-12-30.md  협업일지_Day_20_2026-01-27.md  협업일지_Day_21_2026-01-28.md  협업일지_Day_3_2026-01-02.md  협업일지_Day_4_2026-01-05.md  협업일지_Day_5_2026-01-06.md  협업일지_Day_6_2026-01-07.md  협업일지_Day_6_2026-01-08.md  협업일지_Day_7_2026-01-09.md  협업일지_Day_9_2026-01-12.md  협업일지_Day_9_2026-01-13.md
docs/협업일지/김민혁/: 2025-12-29 Daily 협업일지.md  index.md
docs/협업일지/박지윤/: index.md
docs/협업일지/이건희/: index.md  templet_협업일지_Day_2_2026-12-30.md  협업일지_2025-12-29.md  협업일지_2025-12-31.md  협업일지_2026-01-02.md  협업일지_2026-01-05.md  협업일지_2026-01-06.md  협업일지_2026-01-07.md  협업일지_2026-01-08.md  협업일지_2026-01-09.md  협업일지_2026-01-12.md  협업일지_2026-01-13.md  협업일지_2026-01-14.md  협업일지_2026-01-15.md  협업일지_2026-01-16.md  협업일지_2026-01-19.md  협업일지_2026-01-20.md  협업일지_2026-01-21.md  협업일지_2026-01-22.md  협업일지_2026-01-23.md
docs/협업일지/이솔형/: index.md  templet_협업일지_Day_1_2026-00-00.md
docs/협업일지/이슬형/: index.md
docs/회의록/: 251229.md  251230.md  251231  260102.md  260105.md  260106.md  260107.md  260108.md  260109.md  260112  260113.md  260114.md  260115.md  260116.md  260119.md  260120.md  260121.md  260122.md  260123.md  260126.md  260127.md  260128.md  index.md  팀회의록_templet.md
examples/: backend_integration_direct.py  backend_integration_llm.py  backend_integration_mcp.py  test_clip_score.py
script/김명환/: .gitignore  banana_table.ipynb  flux_1_create_image.ipynb  flux_1_create_image_02.ipynb  flux_1_create_image_03.ipynb  flux_2_create_image.ipynb  flux_create_image.ipynb  llm_text_html.ipynb  llm_text_html01.ipynb  qwen_flux_create_image.ipynb  qwen_flux_create_image01.ipynb  qwen_flux_create_image02.ipynb  test_banana.ipynb  test_banana_table02.ipynb  test_banana_table03.ipynb  test_banana_table04.ipynb  test_banana_table05.ipynb  test_banana_table07.ipynb  test_banana_text01.ipynb  test_banana_text02.ipynb  test_banana_text03.ipynb  test_llm_mcp.ipynb  test_llm_mcp_02.ipynb  test_step1.ipynb
script/김명환/.claude/: context.md  ignore
script/김명환/.github/: copilot-instructions.md
script/김명환/.gradio/: test_llm_mcp_test_mode.ipynb
script/김명환/diffusers/: __init__.py
script/김명환/ignore/: test_llm_mcp_01.ipynb  test_llm_mcp_04.ipynb  test_llm_mcp_05.ipynb  test_step1.ipynb
script/김명환/note/: 4BIT_QUANTIZATION_UPDATE.md  BUGFIX_SUMMARY.md  README_4BIT_QUANTIZATION.md  project.md  test_4bit_quantization.py  test_fix_simple.py  test_synthesizer_fix.py  협업일지_Day_4_2026-01-06.md
script/김명환/note_02/: BUGFIX_SUMMARY.md  README.md  requirements.txt
src/: .gitignore  README.md  docker-compose.yaml  docker-compose.yml
src/ad_chat/: .env.example  Dockerfile  README.md  app.py  config.py  register_job.py  requirements.txt  test_monitoring.py
src/backend/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  customer_db.py  dev.py  requirements.txt
src/homepage_generator/: .dockerignore  Dockerfile  agents.py  api.py  db_client.py  main.py  requirements.txt  state.py
src/mcpadapter/: README.md  __init__.py  llm_adapter.py  mcp_client.py  pyproject.toml
src/mcpadapter/mcpadapter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/nanoCocoa_aiserver/: .dockerignore  AIModelEngine.py  DOCKER.md  Dockerfile  INSTALL.md  MCP_IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README_MCP.md  SETUP_GUIDE.md  config.py  deploy.sh  dev.py  docker-compose.yml  environment.yml  font_manager.py  image_utils.py  main.py  mcp_config.json  mcp_server.py  requirements-docker.txt  requirements.txt  schemas.py  setup_mcp.py  stats_manager.py  step_processors.py  step_stats.json  test_mcp_server.py  utils.py  verify_install.py  worker.py
src/nanoCocoa_mcpserver/: Dockerfile  README.md  config.py  requirements-mcpserver.txt  server.py
tests/: conftest.py  pytest.ini  requirements.txt  run_full_suite.py  runner.py  test_utils.py
tests/app/: app.py
tests/app/api/: routes.py
tests/configs/: presets.json
tests/integration/: test_api.py  test_concurrency.py
tests/mcp/: __init__.py  test_mcp_dummy.py
tests/nanoCocoa_mcpserver/: README.md  README_TESTS.md  TEST_REPORT.md  run_docker_tests.py  run_tests.py  test_api_client.py  test_deployment_final.py  test_docker_integration.py  test_docker_simple.py  test_image_utils.py  test_integration.py  test_interface_dummy.py  test_local_stdio.py  test_mcpadapter.py  test_server.py
tests/notebooks/: test_run.ipynb
tests/reports/: test_20251230155052.md
tests/scripts/: gernerate_cli.py
tests/units/: test_aimodelengine.py  test_api_scenarios.py  test_auto_position.py  test_flux.py  test_font_manager.py  test_image_utils.py  test_sdxl.py  test_segmentation.py  test_stats_manager.py
(+159 files in other folders)
