[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanococoa"
version = "1.0.0"
description = "AI-powered advertisement generation system with MCP server"
authors = [
    {name = "CodeIt Team 3"},
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Core dependencies (aiserver)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.2",
    "pillow>=11.0.0",

    # AI/ML dependencies (aiserver)
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "diffusers>=0.32.0",
    "transformers>=4.46.0",
    "accelerate>=1.1.0",
    "controlnet-aux>=0.0.9",

    # Utilities (aiserver)
    "httpx>=0.27.0",
    "numpy>=1.26.4",
    "opencv-python>=4.10.0.84",
    "scipy>=1.14.1",
    "rembg>=2.0.59",
    "psutil>=6.1.0",

    # MCP Server dependencies (FastMCP SDK)
    # Note: FastMCP is part of the mcp package
    "mcp>=1.0.0",  # Includes mcp.server.fastmcp
    "python-dotenv>=1.0.0",
    
    # LLM-MCP Adapter dependencies
    "openai>=1.0.0",  # OpenAI API client for LLM integration
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",

    # Code quality
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",

    # Development tools
    "ipython>=8.20.0",
    "jupyter>=1.0.0",
]

[project.scripts]
nanococoa-aiserver = "nanoCocoa_aiserver.main:main"
nanococoa-mcpserver = "nanoCocoa_mcpserver.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.md"]

# Black 설정
[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff 설정
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# Pytest 설정
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

# MyPy 설정
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "diffusers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true
